2010-06-13  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/dialog-scale-subtitles.ui:
	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16121 : Feature request: add option to scale all subtitles. (Orig.
	patch by Ludek <anomen>)

2010-05-26  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Split the framerate query with import and export labels.

2010-05-25  kitone  <kitone@gna.org>

	* src/gui/comboboxframerate.cc:
	* src/gui/comboboxframerate.h:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Add set_value to ComboBoxFramerate and set_default_framerate to
	FramerateChooserDialog.

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Sets the framerate of the document after the user have chosen and sets 
	the default value from the document during saving.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Small fix in the regex.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Ask framerate value with the FramerateChooserDialog. Small improvements.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/Makefile.am:
	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/bitc/dialog-bitc.ui:
	Remove the file dialog-bitc.ui, use instead FramerateChooserDialog.

2010-05-25  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/comboboxframerate.cc:
	* src/gui/comboboxframerate.h:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Introduce ComboBoxFramerate and FramerateChooserDialog.

2010-05-22  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sprucestl/Makefile.am:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.se-plugin.in: